jilles      2006/09/03 22:44:55 UTC	(20060903-6281)
  Log:
  I hate that warning about signed vs unsigned comparison...
  

  Changes:	Modified:
  +1 -1		trunk/src/ptasks.c (File Modified) 


pippijn     2006/09/03 22:33:09 UTC	(20060903-6279)
  Log:
  atheme.db is not being installed anymore. It is being generated by atheme
  itself anyway.
  

  Changes:	Modified:
  +0 -0		trunk/dist/atheme.db (File Deleted) 
  +0 -3		trunk/src/Makefile.win32 (File Modified) 
  +1 -3		trunk/win32/atheme.nsi (File Modified) 


jilles      2006/09/03 22:30:26 UTC	(20060903-6277)
  Log:
  Remove misleading comment
  

  Changes:	Modified:
  +0 -1		trunk/backend/postgresql.c (File Modified) 


pippijn     2006/09/03 22:05:48 UTC	(20060903-6275)
  Log:
  Unmerged :S sorry
  

  Changes:	Modified:
  +0 -9		trunk/help/cservice/sendpass (File Deleted) 
  +0 -10	trunk/help/nickserv/link (File Deleted) 
  +0 -335	trunk/include/extern.h (File Deleted) 


pippijn     2006/09/03 22:03:45 UTC	(20060903-6273)
  Log:
  Merged
  

  Changes:	Modified:
  +9 -0		trunk/help/cservice/sendpass (File Added) 
  +10 -0	trunk/help/nickserv/link (File Added) 
  +335 -0	trunk/include/extern.h (File Added) 


jilles      2006/09/03 18:34:42 UTC	(20060903-6271)
  Log:
  Shut down if too many services are killed in one second.
  

  Changes:	Modified:
  +14 -1	trunk/src/ptasks.c (File Modified) 


jilles      2006/09/01 01:05:31 UTC	(20060901-6269)
  Log:
  chanserv close help file: clarify that CLOSE ON will
  immediately kick all users from channel
  

  Changes:	Modified:
  +3 -0		trunk/help/cservice/close (File Modified) 


jilles      2006/09/01 01:04:53 UTC	(20060901-6267)
  Log:
  operserv ignore help file: formatting change to table
  

  Changes:	Modified:
  +4 -4		trunk/help/oservice/ignore (File Modified) 


jilles      2006/09/01 00:45:40 UTC	(20060901-6265)
  Log:
  operserv noop helpfile had akill instead of noop somewhere
  

  Changes:	Modified: