@@ -1,3 +1,15 @@
+jilles      2006/09/03 22:58:36 UTC	(20060903-6283)
+  Log:
+  Add /os clones kline on|off, defaults to off, saved to exempts.db.
+  If clones kline is disabled, no klines are placed, useful
+  for setting an initial exempts list.
+  
+
+  Changes:	Modified:
+  +9 -4		trunk/help/oservice/clones (File Modified) 
+  +55 -2	trunk/modules/operserv/clones.c (File Modified) 
+
+
 jilles      2006/09/03 22:44:55 UTC	(20060903-6281)
   Log:
   I hate that warning about signed vs unsigned comparison...
